# DDD-Demo-for-C

./: .gitignore  BUILD  CMakeLists.txt  README.md
product/: FundServiceFactory.h  TransferServiceFactory.h  UserServiceFactory.h
src/FrameworkComponents/: Exception.h
src/FrameworkComponents/DomainEvent/: DomainEvent.h  EventMonitor.h  PublishSubscribeService.cpp  PublishSubscribeService.h
src/FrameworkComponents/LocalRequestionFilters/: Filter.h  FiltersManager.h  RequestionConfigure.h  Require.h  RequireAccepter.h  RequireMapping.h  RequireMappingsManager.h  RequiresQueuePoolInterface.h  Response.h  StaticInit.cpp
src/FrameworkComponents/NamingService/: NamingServiceManager.h  StaticInit.cpp
src/FrameworkComponents/RequestionFilters/: FiltersManager.h  RequestionConfigure.h  RequireInterceptor.h  RequiresQueue.h  RequiresQueuePool.h
src/FundBC/: FundServiceFactory.h  StaticInit.cpp
src/FundBC/Application/: FundRepositoryInterface.h  FundService.h  FundServiceQueryInterface.h
src/FundBC/BackendAdapters/: FundDAO.h  FundDAOInterface.h  FundPO.h  FundQuery.h  FundRepository.h
src/FundBC/Domain/: Fund.h
src/FundBC/FrontendAdapters/: FundEventMapping.h
src/GlobalBusinessDependency/: EventsMonitorsConfigure.h
src/GlobalBusinessDependency/ServiceInterfaces/: FundServiceInterface.h  TransferServiceInterface.h  UserHttpClient.h  UserServiceInterface.h
src/TransferBC/: StaticInit.cpp  TransferServiceFactory.h
src/TransferBC/Application/: TransferQueryInterface.h  TransferRepositoryInterface.h  TransferService.h
src/TransferBC/BackendAdapters/: TransferDAO.h  TransferDAOInterface.h  TransferPO.h  TransferQuery.h  TransferRepository.h  UserHttpClient.h
src/TransferBC/Domain/: Transfer.h  TransferUser.h
src/TransferBC/FrontendAdapters/: ProtobufRequireAdaptor.h  TransferEventMonitor.h  TransferRequireMapping.h
src/UserBC/: StaticInit.cpp  UserServiceFactory.h
src/UserBC/Application/: UserQueryService.h  UserRepositoryInterface.h  UserService.h
src/UserBC/BackendAdapters/: UserDAO.h  UserDAOInterface.h  UserPO.h  UserQuery.h  UserRepository.h
src/UserBC/Domain/: User.h
src/UserBC/FrontendAdapters/: UserDTO.h  UserEventMonitor.h  UserHttpService.h  UserRequireMapping.h
src/bc/fund/: fund_service_factory.h  static_init.cpp
src/bc/transfer/: static_init.cpp  transfer_service_factory.h
src/bc/user/: UserServiceFactory.h  static_init.cpp
src/framework_components/: exception.h
src/framework_components/comm_lib/: string_helper.h
src/framework_components/domain_event/: domain_event.h  event_monitor.h  memory_publish_subscribe_service.cpp  memory_publish_subscribe_service.h  mysql_publish_subscribe_service.cpp  mysql_publish_subscribe_service.h  publish_subscribe_service.cpp  publish_subscribe_service.h  publish_subscribe_service_handler.h
src/framework_components/idempotent/: idempotent_manager.h  mysql_idempotent_manager.cpp  mysql_idempotent_manager.h
src/framework_components/local_transaction/: mysql_transaction_manager.cpp  mysql_transaction_manager.h  transaction_manager.h
src/framework_components/naming_service/: naming_service_manager.h  static_init.cpp
src/framework_components/network_protocol/: http.h
src/framework_components/requestion_filters/: filter.h  filter_manager.h  filters_manager.h  requestion_configure.h  require.h  require_interceptor.h  require_mapping.h  require_mappings_manager.h  response.h  static_init.cpp
src/global_business_dependency/: EventsMonitorsConfigure.h  events_monitors_configure.h
src/全局业务依赖/服务接口/: 用户服务接口.h  资金帐户服务接口.h
src/全局配置/: 事件处理器管理.h  事件监听器配置.h
src/全局配置/服务接口/: 转账服务接口.h
src/框架组件/: 异常.h
src/框架组件/事件发布订阅/: 事件发布订阅服务.h  事件监听器.h
src/框架组件/事件总线/: 事件发布订阅服务.cpp  事件发布订阅服务.h  领域事件.h
src/框架组件/命令总线/: 命令.h  命令处理器.h  命令处理器管理器.h  命令总线.cpp  命令拦截器.h  命令接收器.h  命令队列.h  命令队列池.h  命令队列池接口.h  处理结果.h  拦截器管理器.h
src/框架组件/命名服务/: 命名服务管理器.h  静态初始化.cpp
src/框架组件/本地事务/: 事务拦截器.h  事务管理器.h
src/框架组件/本地请求拦截/: 请求.h  请求处理器管理器.h  请求处理配置器.h  请求拦截器.h  请求接收器.h  请求队列池接口.h
src/框架组件/请求拦截/: 拦截器管理器.h  请求.h  请求处理器.h  请求处理器管理器.h  请求处理管理器.h  请求处理配置器.h  请求处理配置管理.h  请求总线.cpp  请求接收器.h  请求队列.h  请求队列池.h
src/用户BC/: 用户服务工厂.h  静态初始化.cpp
src/用户BC/主适配器/: 用户DTO.h  用户HTTP服务端.h  用户事件处理器.h  用户请求处理器.h
src/用户BC/从适配器/: 用户DAO.h  用户DAO接口.h  用户PO.h  用户仓储.h  用户查询.h
src/用户BC/应用层/: 用户仓储接口.h  用户服务.h  用户服务接口.h  用户查询接口.h
src/用户BC/领域层/: 用户.h
src/资金帐户BC/: 资金帐户服务工厂.h  静态初始化.cpp
src/资金帐户BC/主适配器/: 资金事件DTO.h  资金事件处理器.h
src/资金帐户BC/从适配器/: 资金帐户DAO.h  资金帐户DAO接口.h  资金帐户PO.h  资金帐户仓储.h  资金帐户查询.h
src/资金帐户BC/应用层/: 资金帐户仓储接口.h  资金帐户服务.h  资金帐户服务接口.h  资金帐户查询接口.h
src/资金帐户BC/领域层/: 资金帐户.h
src/转账BC/: 转帐服务工厂.h  静态初始化.cpp
src/转账BC/主适配器/: HTTP请求适配器.h  Protobuf请求适配器.h  转账DTO.h  转账事件处理器.h  转账命令处理器.h  转账请求处理器.h
src/转账BC/从适配器/: 用户HTTP客户端.h  转账DAO.h  转账DAO接口.h  转账PO.h  转账仓储.h  转账查询.h
src/转账BC/应用层/: 转账仓储接口.h  转账服务.h  转账服务接口.h  转账查询接口.h
src/转账BC/领域层/: 转账.h  转账用户.h
test/: CommonTestFuntions.h  common_test_funtions.h  公共测试方法.h
test/FrameworkTest/: DomainEventTestEnvironment.h  EventMonitorMock.h  FrameworkTest.cpp  RequireFilterMock1.h  RequireFilterMock2.h  RequireMappingMock.h  RequireTestEnvironment1.h  RequireTestEnvironment2.h
test/IntegrationTest/: RequireFlowTest.cpp  RequireFlowTestEnvironment.h
test/UnitTest/FundBC/: ApplicationServiceEnvironment.h  FundBackendEnvironment.h  FundDAOMock.h  FundFrontendEnvironment.h  FundQueryMock.h  FundRepositoryMock.h  FundServiceMock.h  FundUnitTest.cpp  StaticInit.cpp
test/UnitTest/TransferBC/: ApplicationTestEnvironment.h  StaticInit.cpp  TansferServiceMock.h  TransferBackendEnvironment.h  (+6 more)
test/integration_test/: fund_service_factory_for_integration.h  require_flow_test.cpp  require_flow_test_for_integration_environment.h  transfer_service_factory_for_integration.h  user_service_factory_for_integration.h
test/system_test/: framework_configure_for_system.h  transfer_service_factory_for_system.h
test/框架测试/: 事件总线测试环境.h  事件监听器模拟.h  命令总线测试环境1.h  命令总线测试环境2.h  命令拦截器模拟1.h  命令拦截器模拟2.h  基础框架测试.cpp  模拟处理器.h  请求总线测试环境1.h  请求总线测试环境2.h  请求拦截器模拟1.h  请求拦截器模拟2.h
test/集成测试/: 转账流程测试.cpp  转账流程测试环境.h
(+149 files in other folders)
